department-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-service
  namespace: test
  labels:
    app: department-service
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department-service
  template:
    metadata:
      labels:
        app: department-service
    spec:
      containers:
      - name: department-service
        image: rahafog1/department-service
        ports:
        - containerPort: 80
