department-service/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "department-ingress"
  namespace: test

spec:
  rules:
    - host:
      http:
        paths:
          - path: /department
            backend:
              serviceName: department-service
              servicePort: 80
